welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:4: error: type mismatch;
 found   : Unit
 required: Int
	                     if(speed<61){return 0}
                             ^caughtSpeeding:7: error: type mismatch;
 found   : Unit
 required: Int
	                     if(speed<66){return 0}
                             ^